--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>Shenandoah Campus Map</h2>
-                <p><b>Responsibilities:</b> Design, HTML, CSS</p>
+                <p><b>Responsibilities:</b> Interaction development, HTML, CSS, design</p>
                 <p><b>Tech:</b> WordPress, SASS, Git, Grunt, Backbone.js, Materialize</p>
                 <p><b>Link: </b><a href="http://www.su.edu/campus-maps/">su.edu/campus-maps</a></p>
             </div>
