--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="pure-u-1 pure-u-md-3-4">
 
                 <h1>Kilian Frey</h1>
-                <p>Design &amp; front end development</p>
+                <p>Front end engineering &amp; design</p>
                 <ul>
                     <li><a href="docs/resume-kilian-frey.docx">resumé</a></li>
                     <li><a href="https://www.linkedin.com/in/kilianfrey">linkedin</a></li>
