--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="pure-u-1 pure-u-md-3-4">
 
                 <h1>Kilian Frey</h1>
-                <p>Design &amp; front end development</p>
+                <p>Front end development and design</p>
                 <ul>
                     <li><a href="docs/resume-kilian-frey.docx">resumé</a></li>
                     <li><a href="https://www.linkedin.com/in/kilianfrey">linkedin</a></li>
@@ -150,7 +150,7 @@
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>Shenandoah Campus Map</h2>
-                <p><b>Responsibilities:</b> Design, HTML, CSS</p>
+                <p><b>Responsibilities:</b> Interaction development, HTML, CSS, design and illustration</p>
                 <p><b>Tech:</b> WordPress, SASS, Git, Grunt, Backbone.js, Materialize</p>
                 <p><b>Link: </b><a href="http://www.su.edu/campus-maps/">su.edu/campus-maps</a></p>
             </div>
@@ -184,7 +184,7 @@
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>Husky 100</h2>
-                <p><b>Responsibilities:</b> JavaScript, Interaction design, HTML, and CSS.</p>
+                <p><b>Responsibilities:</b> JavaScript, interaction design and development, HTML, and CSS.</p>
                 <p><b>Tech:</b> WordPress, Less, Git, Grunt, Backbone.js, Bootstrap.</p>
                 <p><b>Link: </b><a href="http://www.uw.edu/husky100">uw.edu/husky100</a></p>
             </div>
