--- a/index.html
+++ b/index.html
@@ -54,6 +54,45 @@
 
 
 
+<div class="project">
+
+        <div class="pure-g images">
+            <div class="pure-u-md-1-8"></div>
+            <div class="pure-u-md-3-4">
+                <div class="pure-g">
+                    <div class="pure-u-md-1-1 desktop">
+                        <video width="100%" autoplay loop playsinline
+                          poster="img/works.jpg" >
+                          <source
+                            src="img/works.mp4"
+                            type="video/mp4">
+                          Your browser doesn't support HTML5 video tag.
+                        </video>
+                    </div>
+                    <div class="pure-u-md-1-4">
+                        
+                    </div>
+                </div>
+            </div>
+            <div class="pure-u-md-1-8"></div>
+        </div>
+
+        <div class="pure-g info">
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+            <div class="pure-u-3-4 pure-u-md-2-3">
+                <h2>Amazon Retail</h2>
+                <p><b>Responsibilities:</b> Concept, design, development</p>
+                <p><b>Tech:</b>  Figma, After Effects, TypeScript, Javascript, Amazon build environment</p>
+            </div>
+            <div class="pure-u-1-8 pure-u-md-1-6"></div>
+        </div>
+
+</div>
+
+
+
+
+
 <!-- Piece 2 -->
 
 <div class="project project-plate-project dark">
