Added portfolio work

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <div class="pure-g">
                     <div class="pure-u-md-1-1 desktop">
                         <img src="img/plate.png">
-                        <video width="480" autoplay loop playsinline
+                        <video width="480" muted autoplay loop playsinline
                           poster="img/poster.jpg" >
                           <source
                             src="img/plate.mp4"
