--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <div class="pure-u-md-3-4">
                 <div class="pure-g">
                     <div class="pure-u-md-1-1 desktop">
-                        <video width="100%" autoplay loop playsinline
+                        <video width="100%" muted autoplay loop playsinline
                           poster="img/works.jpg" >
                           <source
                             src="img/works.mp4"
