--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
 
-<!-- 
+
 <div class="project">
 
         <div class="pure-g images">
@@ -82,13 +82,13 @@
             <div class="pure-u-3-4 pure-u-md-2-3">
                 <h2>Amazon Retail</h2>
                 <p><b>Responsibilities:</b> Concept, design, development</p>
-                <p><b>Tech:</b>  Figma, After Effects, TypeScript, Javascript, Amazon build environment</p>
+                <p><b>Tech:</b>  Figma, After Effects, Javascript, TypeScript, Amazon build environment</p>
             </div>
             <div class="pure-u-1-8 pure-u-md-1-6"></div>
         </div>
 
 </div>
- -->
+
 
 
 
